# augmentlens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: demo_quickstart.py
src/augmentlens/: __init__.py
src/augmentlens/analysis/: __init__.py
src/augmentlens/core/: __init__.py  pipeline_hook.py  snapshot_state.py
src/augmentlens/core/adapters/: __init__.py  albumentations_adapter.py  base_adapter.py
src/augmentlens/io/: __init__.py
src/augmentlens/renderers/: __init__.py  base_renderer.py  matplotlib_renderer.py
src/augmentlens/utils/: __init__.py  type_guards.py
tests/: __init__.py  conftest.py
tests/core/: test_albumentations_adapter.py  test_base_adapter.py  test_pipeline_hook.py  test_snapshot_state.py
tests/renderers/: test_base_renderer.py  test_matplotlib_renderer.py
