[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augmentlens"
version = "0.1.0"
description = "Debug and visualize Computer Vision augmentation pipelines with before/after comparisons"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mohamed Hendawy", email = "mohamedhendawy312@gmail.com"}
]
keywords = [
    "computer-vision",
    "augmentation",
    "albumentations",
    "torchvision",
    "debugging",
    "visualization"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
albumentations = ["albumentations>=1.3.0"]
torchvision = ["torchvision>=0.15.0"]
all = [
    "albumentations>=1.3.0",
    "torchvision>=0.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hendawy312/augmentlens"
Documentation = "https://github.com/hendawy312/augmentlens#readme"
Repository = "https://github.com/hendawy312/augmentlens"
Issues = "https://github.com/hendawy312/augmentlens/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
